[package]
name = "tui-demos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "k02_ownership"
path = "src/bin/k02_ownership.rs"

[[bin]]
name = "k03_types"
path = "src/bin/k03_types.rs"

[[bin]]
name = "k04_matching"
path = "src/bin/k04_matching.rs"

[[bin]]
name = "k05_traits"
path = "src/bin/k05_traits.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
